# https://packaging.python.org/en/latest/tutorials/packaging-projects/
# https://hatch.pypa.io/latest/config/build/

[project]
name = "tutor-minio"
license = { text = "AGPL-3.0-only" }
requires-python = ">= 3.9"
authors = [
  {name = "Edly"}, {email = "hello@edly.io"},
]
maintainers = [
  {name = "Danyal Faheem"}, {email = "danyal.faheem@arbisoft.com"}
]
description = "A Tutor plugin for object storage in MinIO"
readme = {file = "README.rst", content-type = "text/x-rst"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
  "tutor>=20.0.0,<21.0.0",
]
# these fields will be set by hatch_build.py
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "tutor[dev]>=20.0.0,<21.0.0", 
  "pylint", 
  "black"
]

[project.entry-points."tutor.plugin.v1"]
minio = "tutorminio.plugin"

# https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-labels
[project.urls]
Homepage = "https://docs.tutor.edly.io/"
Documentation = "https://docs.tutor.edly.io/"
Code = "https://github.com/overhangio/tutor-minio"
Issues = "https://github.com/overhangio/tutor-minio.git/issues"
Changelog = "https://github.com/overhangio/tutor-minio/blob/release/CHANGELOG.md"
Community = "https://discuss.openedx.org/tag/tutor"

# hatch-specific configuration
[tool.hatch.metadata.hooks.custom]
path = ".hatch_build.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
# Disable strict naming, otherwise twine is not able to detect name/version
strict-naming = false
include = [ "/tutorminio", ".hatch_build.py"]
exclude = ["tests*"]

[tool.hatch.build.targets.wheel]
packages = ["tutorminio"]
